added some references to the summary

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -672,17 +672,20 @@ It becomes apparent that the 3D arrangement of these relatively polar \gls{tmh} 
 \section{Summary}
 
 Here, we have observed large biochemical distinction between \gls{ta} proteins with different terminal destinations.
-Crucially, there is a shift in the charged residue inside-outside tandem in different organelles.
-The missing hydrophobicity of mitochondrial protines can be in part attributed to the high abundance of alanine rather than leucine or isoleucine in the \gls{tmh}.
-These differences are likely to be partially adaptations to the organelle location membrane type and also possible cryptic biological factors that play a role in their targeting via chaperone-binding affinity.
-Clear trends and statistical work in this study was not able to probe the interactor dataset due to small sample sizes, however, as the databases are enriched, this same method will be able to answer the questions about chaperone affinity with more accuracy.
-
+Previously it was known that both hydrophobicity and charge are involved in targetting \cite{Costello2017}.
+In this study we find that the location of the charge along and around the \gls{tmh} is different in different subcellular compartments.
+Crucially, there is a shift in the charged residue inside-outside tandem in the \gls{tmh} flanking residues in different organelles which in mitochondria goes against the membrane-potential electrostatic coupling.
+Furthermore, the missing hydrophobicity of mitochondrial \gls{ta} proteins can be in part attributed to the high abundance of alanine rather than leucine or isoleucine in the \gls{tmh}.
 We expected to see evolutionary adaptations of \gls{tmh} hydrophobicity to species-specific membranes, even within eukaryotes~\cite{Baker2017, Sharpe2010}.
 In this study using both a manually curated dataset from UniProt and an automatically filtered list using SwissProt annotation, we do not observe any strong differences.
-Since we could not scrutinise a difference in the species, the strong hydrophobic differences between \gls{tmh}s are indicative of a stronger adaptation pressure than between species.
-This could indeed be a cryptic functional similarity to the signal-anchored proteins.
+Since we could not scrutinise a difference in the species, the strong hydrophobic differences between organelle \gls{tmh}s are indicative of a stronger adaptation pressure than between species.
+These differences are likely to be partially adaptations to the organelle location membrane type and also possible cryptic biological factors that play a role in their targeting via chaperone-binding affinity.
+This could be a functional similarity to the signal-anchored proteins.
 Signal anchored proteins contain a single hydrophobic segment that serves as both a mitochondrial targeting signal and a membrane anchor.
 Signal anchored proteins, along with some \gls{ta} proteins, have been shown to be able to spontaneously insert into the membrane independently from the translocon~\cite{Elisa2012, Lan2000, Colombo2009}.
 
+We could not find any clear trends or perform statistical work on the interactor datasets due to the small sample sizes, however, as the databases are enriched, this same method will be able to answer the questions about chaperone affinity with more accuracy in the future.
+
 Furthermore, the spontaneously inserting \gls{ta} proteins PTP1b and cytochrome b5 appear to share a polar face that emerges in structural models and a strong positive-inside negative-outside electrostatic surface.
-These features are likely to promote insertion potential in the absence of insertion proteins and allow the marginally hydrophobic \gls{tmh} to perform as a suitable membrane anchoring feature.
+The polar face may be responsible for the promotion insertion potential in the absence of insertion proteins, since when the sequence is scrambled, the insertion potential is reduced \cite{Brambillasca2006}.
+The positively and negatively charged residues are distributed like an ideal anchoring \gls{tmh} \cite{Baker2017} which could allow the marginally hydrophobic \gls{tmh} to perform as a suitable membrane anchoring feature.
