--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -9,7 +9,7 @@ In this chapter we will place the \gls{tmh} problem in context, then describe th
 
 \section{$\alpha$ Helices; Structure And Function}
 
-\subsection{Trans-membrane Helix Sequence Composition}
+\subsection{transmembrane Helix Sequence Composition}
 
 Measurements of the \gls{tmh} regions have found that they are roughly 20 residues in length; 17.3$\pm$3.1 from 160 \gls{tmh}s~\cite{Hildebrand2004}, 27.1$\pm$5.4 residues based on 129 \gls{tmh}s~\cite{Ulmschneider2001}, 26.4 residues based on 45 \gls{tmh}s~\cite{Bowie1997}, 25.3$\pm$6.0 residues based on 702 \gls{tmh}s~\cite{Cuthbertson2005a}, 24.6$\pm$5.6 from 837 \gls{tmh}s~\cite{Baeza-Delgado2013}, and 28.6$\pm$1.6\AA~to 33.5~$\pm$3.1\AA~from 191 proteins depending on membrane types~\cite{Pogozheva2013}.
 There are a couple of reasons for this variation.
@@ -21,7 +21,7 @@ Secondly is that it is emerging that different membranes have different thicknes
 \centering
 \includegraphics[width=1\textwidth]{Intro/Helix_anatomy}
 		\captionof{figure}[A cartoon showing the general components of the membrane and a typical \gls{tmh}.]{\textbf{A cartoon showing the general components of the membrane and a typical \gls{tmh}.}
-The example used here for illustrative purposes is the trans-membrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}.
+The example used here for illustrative purposes is the transmembrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}.
 Dark grey areas denote the area of lipid head groups.
 The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane.
 The helix core is mostly composed of hydrophobic residues.
@@ -67,7 +67,7 @@ A study of conserved tryptophan residues during folding of integrin $\alpha$II$\
 %More than one explanation has been proposed for the physical and/or chemical basis for the strong preference of aromatic residues to reside in the membrane-water interface region.
 The Tyrosine side chain is a six-membered aromatic ring with an –OH group attached.
 Tryptophan has two aromatic rings that are fused into one large hydrophobic ring-structure.
-Phenylalanine, although aromatic, is completely hydrophobic, and is found in the trans-membrane part rather than the interfacial parts of MPs.
+Phenylalanine, although aromatic, is completely hydrophobic, and is found in the transmembrane part rather than the interfacial parts of MPs.
 The classical explanation for the preference of Tyrosine and Tryptophan to reside in the interfacial regions is their dipolar character.
 The side chain must simply seekmpromise.
 This can be achieved by burying the aromatic ring close to, or within, the hydrophobic core, while the hydrophilic part can interact with the polar lipid head-groups at the interface.
@@ -85,9 +85,9 @@ More recently it was found that although in simulations the energetic cost of ar
 That same study also found that in simulations, snorkelling, bilayer deformation, and peptide tilting combined to to be sufficient to lower the thermodynamic stability penalty of arginine insertion so that hydrophobic \gls{tmh}s with a central arginine residue will readily insert into the membrane.
 
 
-\subsection{Hydrophobicity of Trans-membrane Segments}\label{ssection:hydrophobicityscales}
+\subsection{Hydrophobicity of transmembrane Segments}\label{ssection:hydrophobicityscales}
 
-Perhaps the most prevalent and important feature of the trans-membrane regions is the membrane spanning region which is composed mostly of non-polar residues.
+Perhaps the most prevalent and important feature of the transmembrane regions is the membrane spanning region which is composed mostly of non-polar residues.
 More recently the hydrophobic group region has been associated with cell localisation and a broad range of biochemical functions~\cite{Junne2010, Wong2012}.
 
 Over the last 50 years or so, there have been many attempts to use hydrophobicity scales of residues to predict structural classifications of proteins.
@@ -236,7 +236,7 @@ The compartmentalisation of cellular biochemistry is arguably one of the most si
  The proteins that allow life to use this biochemical barrier are perhaps equally important.
 Together, the lipid bilayer and proteins therein allow complex biochemical systems that facilitate life as we know it.
 
-It is critical to understand that the lipid bilayer and the trans-membrane $\alpha$ helices are inextricably linked, and often what we observe from the $\alpha$ helices reflect the properties of the much harder to study membranes.
+It is critical to understand that the lipid bilayer and the transmembrane $\alpha$ helices are inextricably linked, and often what we observe from the $\alpha$ helices reflect the properties of the much harder to study membranes.
 The lipid membranes influence the local structure, dynamics, and activity of proteins in the membrane in non-trivial ways~\cite{Bondar2010, Bondar2009, Jardon-Valadez2010, Kalvodova2005, Urban2005, White2001a, Jensen2004, Henin2014}, as well as protein folding~\cite{Kauko2010}.
 %Henin2014.
 %Add references about the hydrogen bonds (white2005 and another one...) %Perhaps this wedge of citations should be expanded.
@@ -256,14 +256,15 @@ This can be seen even in relatively early \gls{md} simulations~\cite{Goetz1998}.
 It has been known for some time that the outer membranes of Gram-negative bacteria are asymmetric in terms of lipid composition.
 The outer membranes contain lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types.
 Adding to the membrane asymmetry composition story, a thorough analysis of residue composition in yeast and human \gls{tmh} regions revealed intra-membrane leaflet composition asymmetry in the \gls{er}, but not the Golgi~\cite{Sharpe2010}.
-Furthermore, protein\-lipid interactions have been shown to be determinants of membrane curvature~\cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch~\cite{Planque2003}.
+Furthermore, protein-lipid interactions have been shown to be determinants of membrane curvature~\cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch~\cite{Planque2003}.
 %the plaque reference is messed up.
-It may need changing with every bib.tex update unless the permanent record is changed.
+% It may need changing with every bib.tex update unless the permanent record is changed.
 
 \subsection{Membrane Potential}
 Simply put, membrane potential is the voltage across a membrane.
 If the membrane is permeable to a certain type of ion, then the ion will experience an electrical pulling force during the diffusion process that pulls toward the ``preferred'' biological location.
-This clearly depends on a chemical component involving both the charge and ion concentration gradient.There are various ways of estimating the membrane potential \textit{ ab initio}.
+This clearly depends on a chemical component involving both the charge and ion concentration gradient.
+There are various ways of estimating the membrane potential \textit{ ab initio}.
 
 The Nernst equation can be derived directly from the simplified thermodynamic principles (i) the Boltzmann distribution, and (ii) a field charge interaction energy~\cite{Feiner1994}.
 It is defined as:
@@ -274,7 +275,7 @@ It is defined as:
 
 Where charge $Em$ is the membrane potential, $z$ is the ion charge, $c$ is the concentration of an ion in that cell environment.
 
-One problem in a biological membranes is that the compartments always  involve multiple ion channels.
+One problem in biological membranes is that the compartments always  involve multiple ion channels.
 The Goldman equation aims to solve this problem by accounting for several ions that contribute to $c_{out}$ and $c_{in}$ (such as $K^+$, $Na^+$, and $Cl^-$) simultaneously:
 
 \begin{equation}
@@ -295,11 +296,11 @@ Therefore one should be cautious to understand the limitations and variability w
 \subsubsection{Organelle Membrane Potentials}
 
 Several studies have attempted to quantify the various voltages across the intracellular membranes.
-Negativity was found in the \gls{er}, with a voltage between between 75mV to 95mV in the \gls{er} membrane~\cite{Qin2011, Worley1994}.
+Negativity was found in the \gls{er}, with a voltage between 75mV to 95mV in the \gls{er} membrane~\cite{Qin2011, Worley1994}.
 Negativity was found in the mitochondrial matrix with a  voltage across the mitochondrial membrane at 150mV~\cite{Perry2011}.
 No notable membrane potential has been identified in the Golgi~\cite{Schapiro2000, Llopis1998}.
 
-\section{Biogenesis of Trans-membrane Proteins}
+\section{Biogenesis of transmembrane Proteins}
 %Depth of secretion pathway (talk about translocons in depth here) & outline post-translational insertion
 \subsection{Translocation Overview}
 There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic post-translational translocation, bacterial post-translational insertion using the Tat system for folded proteins and the Sec system for unfolded proteins, and co-translational insertion in bacteria through the~\gls{htl} protein complex or its individual components.
@@ -313,7 +314,7 @@ The overwhelming majority of~\gls{tmp}s use the co-translational method of trans
 It has long been understood that this method is essentially the ~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to a~\gls{sr} in association with some membrane insertion machinery on the~\gls{er}~\cite{Pool2005, Hessa2005}.
 
 Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
-Mutant studies of\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
+Mutant studies of~\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
 These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
 
 
