copy pasted some background info

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -1,7 +1,39 @@
 
-\chapter{Identifying Intramembrane Folds Using Sequence Complexity} %Perhaps
+\chapter{Co-operative TMH Insertion}
 \section{Abstract}
 \section{Introduction}
+
+Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., & High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
+
+
+
+Good bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., & White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
+
+
+
+Potassium channel (shaker family) S3–S4 insertion may, in part, occur in a sequential or “cotranslational” manner potassium channel - Zhang,L., Sato,Y., Hessa,T., von Heijne,G., Lee,J.-K., Kodama,I., Sakaguchi,M. and Uozumi,N. (2007) Contribution of hydrophobic and electrostatic interactions to the membrane integration of the Shaker K+ channel voltage sensor domain. Proc. Natl. Acad. Sci. U. S. A., 104, 8263–8.
+
+
+
+
+SecY “cracks” open according to crystal structure analysis. Allows potential TMH to probe the environment. Egea,P.F. and Stroud,R.M. Lateral opening of a translocon upon entry of protein suggests the mechanism of insertion into membranes. 10.1073/pnas.1012556107.
+
+
+
+
+Translational Arrest Peptides as in Vivo Force Sensors found interactions between C-terminal TMH and upstream TMH as the C-terminal TMH is partitioning from the translocon. 1. Cymer,F. and von Heijne,G. (2013) Cotranslational folding of membrane proteins probed by arrest-peptide-mediated force measurements. Proc. Natl. Acad. Sci. U. S. A., 110, 14640–5.
+
+\subsection{Ribsomes in the biogenesis of membrane proteins.}
+Accessibility assay and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (“paddle”) of a voltage-gated potassium (Kv)forms in the ribosome tunnel - Tu,L., Khanna,P. and Deutsch,C. (2014) Transmembrane Segments Form Tertiary Hairpins in the Folding Vestibule of the Ribosome. J. Mol. Biol., 426, 185–198.
+
+ Size dependent folding happens through the exit tunnel. Ribosome mutants (Leucine 23 and 24 deletions) Zinc finger folds deeper in L23 mutant than wildtype (but not L24) and a 100 residue domain folds deeper than the L24 mutant (but not the L23). Kudva,R., Pardo-Avila,F., Sandhu,H., Carroni,M., Bernstein,H.D. and Heijne,G. Von (2018) The Shape of the Ribosome Exit Tunnel Affects Cotranslational Protein Folding. bioRxiv, 10.1101/274191.
+
+Ribosomal folding of the TMHs (in Kv1.3) is kept in the translocon therefor tertiary folding of the voltage sensor domain occurs via preformed secondary-structure formation. Tu,L.W. and Deutsch,C. (2010) A Folding Zone in the Ribosomal Exit Tunnel for Kv1.3 Helix Formation. J. Mol. Biol., 396, 1346–1360.
+
+Ribosomal tunnel speeds up elongation of neutral and negatively-charged peptides because it has sporadic negative patches. Lu,J. and Deutsch,C. (2008) Electrostatics in the Ribosomal Tunnel Modulate Chain Elongation Rates. J. Mol. Biol., 384, 73–86.
+
+
+
 \section{Methods}
 \subsection{Datasets}
 \subsection{Complexity}
