lay abstract fixed typos

--- a/thesis.tex
+++ b/thesis.tex
@@ -92,22 +92,21 @@ In this thesis, I make the argument that there are different classifications of 
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
-The survival of each of our cells relies on a a cellular barrier to separate themselves from the surrounding environment.
-This cellular skin can be thought of as the bag that contains all the important machinery required for normal cell function.
-The barrier works by being chemically very different to both the outside environment, and to the inside of the cell, which in both cases are mostly water.
+The survival of each of our cells relies on a cellular barrier to separate themselves from the surrounding environment.
+The barrier works by being chemically very different from both the outside environment and to the inside of the cell, which in both cases are mostly water.
 The membrane is fatty, and because of that, the membrane repels water.
 
-Proteins are the molecular machinery that form much of the cell structure and shape as well as carrying out many of the cell's routine tasks.
-Around a third of our genome codes for proteins that are permanently embedded in the membrane, but because these proteins are adapted for a life in the water repelling cell wall, they are very hard to study in laboratories which often rely on methods that hold proteins in water based solutions.
+Proteins are the molecular machinery that forms much of the cell structure and shape as well as carrying out many of the cell's routine tasks.
+Around a third of our genome codes for proteins that are permanently embedded in the membrane, but because these proteins are adapted for a life in the water repelling cell wall, they are very hard to study in laboratories which often rely on methods that hold proteins in water-based solutions.
 
 In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin.
-Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work with in a laboratory setting.
+Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work within a laboratory setting.
 
-We analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionary selected across bacteria, animals, and plants.
+We analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants.
 This is especially true for regions that specifically anchor the protein into the cellular wall.
- Where the embedded regions have additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
+ Where the embedded regions have an additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
 
- This thesis demonstrates the radically different evolutionary story that  transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to become mould to the membrane as best they can.
+ This thesis demonstrates the radically different evolutionary story that transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to become mould to the membrane as best they can.
 
  %But what is the point, what have we learned.
 
